@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-11T08:15:48Z",
-  "count_outdated" : 968,
-  "uniques_outdated" : 566,
+  "timestamp" : "2023-11-11T16:15:59Z",
+  "count_outdated" : 970,
+  "uniques_outdated" : 567,
   "count" : 1008,
   "uniques" : 586,
   "clones" : [
-    {
-      "timestamp": "2023-10-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-29T00:00:00Z",
       "count": 2,
