@@ -1,3 +1,12 @@
+2023-11-11T16:15:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6835294590 # 1367
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
+* notice: last 14d: unq all: 2 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 566 968 / 586 1008
+* notice: next accum: outdated-unq outdated-all / unq all: 567 970 / 586 1008
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-28] / []
+
 2023-11-11T08:15:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6833095155 # 1366
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
